moltservice: added backend API feature to parse through logs and return verify stats and mismatch details
Release Note: None
