# moltservice/gen/http/openapi.yaml
@@ -131,6 +131,34 @@ paths:
                             $ref: '#/definitions/verify_runResponse'
             schemes:
                 - http
+    /api/v1/verify/{id}:
+        get:
+            tags:
+                - moltservice
+            summary: get_specific_verify_task moltservice
+            operationId: moltservice#get_specific_verify_task
+            parameters:
+                - name: id
+                  in: path
+                  description: id for the verify task
+                  required: true
+                  type: integer
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/MoltserviceGetSpecificVerifyTaskResponseBody'
+                        required:
+                            - id
+                            - name
+                            - status
+                            - started_at
+                            - finished_at
+                            - fetch_id
+                            - stats
+                            - mismatches
+            schemes:
+                - http
     /docs.html:
         get:
             tags:
@@ -333,9 +361,6 @@ definitions:
                     - level: INFO
                       message: This is a log message
                       timestamp: 1704233519
-                    - level: INFO
-                      message: This is a log message
-                      timestamp: 1704233519
             name:
                 type: string
                 description: name of the fetch run
@@ -373,16 +398,13 @@ definitions:
                       name: jyang pg to crdb
                       started_at: 1704233519
                       status: IN_PROGRESS
-                    - fetch_id: 1704233521
-                      finished_at: 1704233521
-                      id: 1704233521
-                      name: jyang pg to crdb
-                      started_at: 1704233519
-                      status: IN_PROGRESS
         example:
             finished_at: 1704233521
             id: 1704233521
             logs:
+                - level: INFO
+                  message: This is a log message
+                  timestamp: 1704233519
                 - level: INFO
                   message: This is a log message
                   timestamp: 1704233519
@@ -414,6 +436,12 @@ definitions:
                   name: jyang pg to crdb
                   started_at: 1704233519
                   status: IN_PROGRESS
+                - fetch_id: 1704233521
+                  finished_at: 1704233521
+                  id: 1704233521
+                  name: jyang pg to crdb
+                  started_at: 1704233519
+                  status: IN_PROGRESS
         required:
             - id
             - name
@@ -422,6 +450,120 @@ definitions:
             - finished_at
             - logs
             - verify_runs
+    MoltserviceGetSpecificVerifyTaskResponseBody:
+        title: MoltserviceGetSpecificVerifyTaskResponseBody
+        type: object
+        properties:
+            fetch_id:
+                type: integer
+                description: ID of the associated fetch run
+                example: 1704233521
+                format: int64
+            finished_at:
+                type: integer
+                description: finished at time
+                example: 1704233521
+                format: int64
+            id:
+                type: integer
+                description: ID of the run
+                example: 1704233521
+                format: int64
+            mismatches:
+                type: array
+                items:
+                    $ref: '#/definitions/verify_mismatchResponseBody'
+                description: verify mismatches (i.e. data mismatches, missing rows)
+                example:
+                    - level: INFO
+                      message: This is a log message
+                      schema: public
+                      table: users
+                      timestamp: 1704233519
+                      type: mismatching table definition
+                    - level: INFO
+                      message: This is a log message
+                      schema: public
+                      table: users
+                      timestamp: 1704233519
+                      type: mismatching table definition
+                    - level: INFO
+                      message: This is a log message
+                      schema: public
+                      table: users
+                      timestamp: 1704233519
+                      type: mismatching table definition
+                    - level: INFO
+                      message: This is a log message
+                      schema: public
+                      table: users
+                      timestamp: 1704233519
+                      type: mismatching table definition
+            name:
+                type: string
+                description: name of the run
+                example: jyang pg to crdb
+            started_at:
+                type: integer
+                description: started at time
+                example: 1704233519
+                format: int64
+            stats:
+                $ref: '#/definitions/verify_stats_detailedResponseBody'
+            status:
+                type: string
+                description: status of the run
+                example: IN_PROGRESS
+                enum:
+                    - IN_PROGRESS
+                    - SUCCESS
+                    - FAILURE
+        example:
+            fetch_id: 1704233521
+            finished_at: 1704233521
+            id: 1704233521
+            mismatches:
+                - level: INFO
+                  message: This is a log message
+                  schema: public
+                  table: users
+                  timestamp: 1704233519
+                  type: mismatching table definition
+                - level: INFO
+                  message: This is a log message
+                  schema: public
+                  table: users
+                  timestamp: 1704233519
+                  type: mismatching table definition
+                - level: INFO
+                  message: This is a log message
+                  schema: public
+                  table: users
+                  timestamp: 1704233519
+                  type: mismatching table definition
+            name: jyang pg to crdb
+            started_at: 1704233519
+            stats:
+                net_duration_ms: 100000
+                num_column_mismatch: 1
+                num_conditional_success: 100000
+                num_extraneous: 1
+                num_live_retry: 1
+                num_mismatch: 1
+                num_missing: 1
+                num_success: 50000
+                num_tables: 5
+                num_truth_rows: 100000
+            status: IN_PROGRESS
+        required:
+            - id
+            - name
+            - status
+            - started_at
+            - finished_at
+            - fetch_id
+            - stats
+            - mismatches
     fetch_runResponse:
         title: fetch_runResponse
         type: object
@@ -550,6 +692,49 @@ definitions:
             - timestamp
             - level
             - message
+    verify_mismatchResponseBody:
+        title: verify_mismatchResponseBody
+        type: object
+        properties:
+            level:
+                type: string
+                description: level for logging
+                example: INFO
+            message:
+                type: string
+                description: message for the logging
+                example: This is a log message
+            schema:
+                type: string
+                description: schema for the db
+                example: public
+            table:
+                type: string
+                description: name of the table
+                example: users
+            timestamp:
+                type: integer
+                description: timestamp of log
+                example: 1704233519
+                format: int64
+            type:
+                type: string
+                description: type of mismatch
+                example: mismatching table definition
+        example:
+            level: INFO
+            message: This is a log message
+            schema: public
+            table: users
+            timestamp: 1704233519
+            type: mismatching table definition
+        required:
+            - timestamp
+            - level
+            - message
+            - schema
+            - table
+            - type
     verify_runResponse:
         title: verify_runResponse
         type: object
@@ -650,3 +835,79 @@ definitions:
             - started_at
             - finished_at
             - fetch_id
+    verify_stats_detailedResponseBody:
+        title: verify_stats_detailedResponseBody
+        type: object
+        properties:
+            net_duration_ms:
+                type: number
+                description: net duration in milliseconds
+                example: 100000
+                format: double
+            num_column_mismatch:
+                type: integer
+                description: number column mismatches
+                example: 1
+                format: int64
+            num_conditional_success:
+                type: integer
+                description: number of rows that had conditional success
+                example: 100000
+                format: int64
+            num_extraneous:
+                type: integer
+                description: number of extraneous rows
+                example: 1
+                format: int64
+            num_live_retry:
+                type: integer
+                description: number of live retries
+                example: 1
+                format: int64
+            num_mismatch:
+                type: integer
+                description: number of mismatching rows
+                example: 1
+                format: int64
+            num_missing:
+                type: integer
+                description: number of missing rows
+                example: 1
+                format: int64
+            num_success:
+                type: integer
+                description: number of successful rows processed
+                example: 50000
+                format: int64
+            num_tables:
+                type: integer
+                description: number of tables processed
+                example: 5
+                format: int64
+            num_truth_rows:
+                type: integer
+                description: number of rows processed
+                example: 100000
+                format: int64
+        example:
+            net_duration_ms: 100000
+            num_column_mismatch: 1
+            num_conditional_success: 100000
+            num_extraneous: 1
+            num_live_retry: 1
+            num_mismatch: 1
+            num_missing: 1
+            num_success: 50000
+            num_tables: 5
+            num_truth_rows: 100000
+        required:
+            - num_tables
+            - num_truth_rows
+            - num_success
+            - num_conditional_success
+            - num_missing
+            - num_mismatch
+            - num_extraneous
+            - num_live_retry
+            - num_column_mismatch
+            - net_duration_ms
